# wfits.app

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE.md  README.md  README.rst  TESTS.md  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  turbo.json
.github/workflows/: test.yml
.husky/: pre-commit
apps/clothing-processor/: .env.example  LICENSE.md  package.json  pyproject.toml  requirements-dev.txt  requirements-prod.txt  run.py
apps/clothing-processor/clothing_processor/: main.py
apps/db/: .env.example  docker-compose.yaml  package.json  start.sh  stop.sh
apps/db/migrations/: 001_init.sql
apps/outfit-gen/: .cache.sqlite  .env.example  package.json  pyproject.toml  run.py
apps/outfit-gen/outfit_gen/: main.py
apps/outfit-gen/outfit_gen/prisma/: schema.prisma
apps/outfit-gen/outfit_gen/tests/: test_3_1.py  test_6_2.py  test_db.py  test_main.py  test_weather.py
apps/outfit-gen/outfit_gen/utils/: db.py  weather.py
apps/outfit-gen/prisma/: schema.prisma
apps/outfit-gen/prisma/migrations/20250508121354_implicit_intersection_tables/: migration.sql
apps/web/: .env.example  .eslintrc.json  README.md  jest.config.ts  middleware.ts  next-auth.d.ts  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  icon.tsx  layout.tsx  not-found.tsx  page.tsx
apps/web/lib/: auth.ts  auth0.ts  env.ts  (+3 more)
docs/source/: conf.py  index.md  index.rst
research/aiModel/: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  fashionmnist.py  predict.py
research/ui/: package-lock.json  package.json
(+158 files in other folders)
