[tool.poetry]
name = "outfit-gen"
version = "0.1.0"
description = ""
authors = ["leomosley <leo.mosley2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
shared-utils = {path = "../../packages/shared", develop = true}
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
pyjwt = "^2.10.1"
dotenv = "^0.9.9"
psycopg2-binary = "^2.9.10"
prisma = "^0.15.0"
asyncio = "^3.4.3"
openmeteo-requests = "^1.3.0"
requests-cache = "^1.2.1"
retry-requests = "^2.0.0"
numpy = "^2.2.4"
pandas = "^2.2.3"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
